# encore

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: playlist.md  usage.md
src/: configuration.rs  file_format.rs  input.rs  lib.rs  macros.rs  main.rs  mpris_handler.rs  threading.rs  tui.rs
src/tui/: tooey.rs
