[package]
name = "echotune"
version = "0.1.0-rc3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
basic-toml = { version = "0.1.9", optional = true }
lazy_static = "1.5.0"
rodio = { path = "./echotune-rodio", default-features = false, features = ["minimp3", "flac", "vorbis", "wav"] }
serde = { version = "1.0.210", optional = true, features = ["serde_derive"] }
terminal_size = { version = "0.3.0", default-features = false }
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
# don't use minimp3 audio backend because it doesnt compile on windows, and i don't want to fix it.
rodio = { path = "./echotune-rodio", default-features = false, features = ["mp3", "flac", "vorbis", "wav"] }

[profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
configuration = [ "basic-toml", "serde" ]

