[package]
name = "encore"
version = "0.2.0-canary.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
getch-rs = "=0.2.0"
lazy_static = "1.5.0"
rodio = { path = "./encore-rodio", default-features = false, features = ["minimp3", "flac", "vorbis", "wav"] }
terminal_size = { version = "0.3.0", default-features = false }

# Optionals
# Configuration Support
basic-toml = { version = "0.1.9", optional = true }
serde = { version = "1.0.210", optional = true, features = ["serde_derive"] }

[target.'cfg(windows)'.dependencies]
# don't use minimp3 audio backend because it doesnt compile on windows, and i don't want to fix it.
rodio = { path = "./encore-rodio", default-features = false, features = ["mp3", "flac", "vorbis", "wav"] }

[profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
configuration = [ "basic-toml", "serde" ]

