[package]
name = "encore"
version = "0.2.0-canary.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
getch-rs = "=0.2.0"
lazy_static = "1.5.0"
terminal_size = { version = "0.3.0", default-features = false }

# Optionals
# Configuration Support
basic-toml = { version = "0.1.9", optional = true }
serde = { version = "1.0.210", optional = true, features = ["serde_derive"] }
# mp3 support is huge. don't compile it if you don't plan on playing any mp3s.
# or you can trade binary size for memory leaks by using `minimp3` instead.
rodio = { path = "./encore-rodio", default-features = false, features = ["mp3", "flac", "vorbis", "wav"] }
dhat = { version = "0.3.3", optional = true }

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
configuration = [ "basic-toml", "serde" ]
dhat-heap = [ "dhat" ]

